Prevent horizontal scroll by adding overflow-x hidden
Add overflow-x hidden to prevent horizontal scroll.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,7 @@ html, body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
